--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,15 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
+/*   消除不同浏览器之间的样式差异 */
+* {
+    margin: 0%;
+    padding: 0%;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+body {
+    background-color: antiquewhite;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+/* 导入本地字体，之后使用"KuaiLe"直接进行使用（用Google的在线字体不知道为什么不生效） */
+@font-face {
+    font-family: KuaiLe;
+    src: url('../fonts/ZCOOLKuaiLe-Regular.ttf');
 }
